Add authorization and redis caching layer
